<resources>
    <string name="app_name">TastyCraft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_100k_premium_recipe">100K+ Premium Recipe</string>
    <string name="get_cooking">Get Cooking</string>
    <string name="simple_way_to_find_tasty_recipe">Simple way to find Tasty Recipe</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="get">Get</string>
    <string name="cooking">Cooking</string>
    <string name="hello">Hello,</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_with">Or Sign in With</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="let_s_help_you_set_up_your_account_it_won_t_take_long">Let’s help you set up your account, it won’t take long.</string>
    <string name="accept_terms_condition"><![CDATA[Accept terms & Condition]]></string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_a_member">Already a member?</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="hello_">Hello</string>
    <string name="bro">Bro</string>
    <string name="what_are_you_cooking_today">What are you cooking today?</string>
    <string name="search_recipe">Search recipe</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="category">category:</string>
    <string name="country">country:</string>
    <string name="search_recipes">Search recipes</string>
    <string name="recent_search">Recent Search</string>
    <string name="search_result">Search Result</string>
    <string name="not_found">Not Found</string>
    <string name="filter_search">Filter Search</string>
    <string name="filter">Filter</string>
    <string name="instruction">Instruction</string>
    <string name="ingredient">Ingredient</string>
    <string name="see_in_youtube">See In Youtube</string>
    <string name="go_to_source">Go To Source</string>
    <string name="tastycraft">TastyCraft</string>
    <string name="login">Login</string>
    <string name="saved_food">Saved Food</string>
</resources>