<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:enabled="true"

        />

    <item
        android:id="@+id/menu_saved"
        android:title="@string/saved"
        android:icon="@drawable/ic_saved"
        />

    <item
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent"
        />


    <item android:enabled="true"
        android:id="@+id/menu_notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"
        />

    <item
        android:enabled="true"
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />

    </menu>