<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screen.login.LoginFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/shape_gray_border"
                android:hint="@string/enter_email"
                android:paddingStart="30dp"
                android:textColorHint="@color/gray"
                tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/enter_password"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/shape_gray_border"
                android:hint="@string/enter_password"
                android:paddingStart="30dp"
                android:textColorHint="@color/gray"
                tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text=""
                android:textColor="@color/orange"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_green_bg"
                android:drawableEnd="@drawable/ic_right_arrow"
                android:drawablePadding="-30dp"
                android:fontFamily="@font/font_poppins_regular"
                android:paddingEnd="10dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,VisualLintButtonSize" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>