<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.ui.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/create_an_account"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/let_s_help_you_set_up_your_account_it_won_t_take_long"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_gray_border"
                android:hint="@string/enter_email"
                android:lines="1"
                android:paddingStart="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_gray_border"
                android:hint="@string/enter_email"
                android:lines="1"
                android:paddingStart="30dp"
                android:textColorHint="@color/gray"
                tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_gray_border"
                android:hint="@string/enter_email"
                android:lines="1"
                android:paddingStart="30dp"
                android:textColorHint="@color/gray"
                tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_gray_border"
                android:hint="@string/enter_email"
                android:lines="1"
                android:paddingStart="30dp"
                android:textColorHint="@color/gray"
                tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_condition"
                android:textColor="@color/orange"
                app:buttonTint="@color/orange" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_green_bg"
                android:drawableEnd="@drawable/ic_right_arrow"
                android:drawablePadding="-30dp"
                android:fontFamily="@font/font_poppins_regular"
                android:paddingEnd="10dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/or_sign_in_with"
                android:textAlignment="center"
                android:textColor="@color/gray"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape_gray_border"
                    android:src="@drawable/ic_google"
                    tools:ignore="ImageContrastCheck,ImageContrastCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/shape_gray_border"
                    android:src="@drawable/ic_facebook"
                    tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/already_a_member"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>