<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical"
    tools:context=".presentation.screen.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGoBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_left_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/font_poppins_regular"
            android:text="@string/search_recipes"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/shape_gray_border"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/search_recipe"
            android:importantForAutofill="no"
            android:paddingStart="10dp"
            android:textColorHint="@color/gray"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibSearchClick"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_green_bg"
            android:src="@drawable/ic_setting" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="@font/font_poppins_regular"
        android:text="@string/search_result" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/loader"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:visibility="gone"
        android:textColor="@color/design_default_color_error"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"/>


</androidx.appcompat.widget.LinearLayoutCompat>